# opengl-ssao-demo

./: .clang-format  .clang-tidy  .gitattributes  README.md  meson.build
shaders/geometry/: frag.glsl  vert.glsl
shaders/lighting/: frag.glsl  vert.glsl
shaders/ssao/: blur-frag.glsl  depth-frag.glsl
src/: camera.cpp  camera.hpp  loader.cpp  loader.hpp  main.cpp  manager.cpp  manager.hpp  mesh.cpp  mesh.hpp  scene.cpp  scene.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
subprojects/glad/: meson.build
subprojects/glad/include/glad/: glad.h
subprojects/glad/src/: glad.c
subprojects/stb_image/: meson.build
subprojects/tinyobjloader/: meson.build
subprojects/tinyobjloader/include/: tiny_obj_loader.hpp
subprojects/tinyobjloader/src/: tiny_obj_loader.cpp
